# Meeting-notes-summarizer

./: .env.example  .gitignore  CLAUDE.md  DEPLOYMENT_CHECKLIST.md  DOMAIN_ARCHITECTURE.md  HOSTINGER_DEPLOYMENT.md  INITIAL.md  LIVE_RECORDING_FEATURE.md  PLANNING.md  QUICKSTART.md  QUICK_DEPLOY.md  README.md  docker-compose.yml
.claude/: settings.local.json
.claude/.claude/: settings.local.json
backend/: .dockerignore  Dockerfile  pyproject.toml  pytest.ini  requirements.txt
backend/app/: main.py
backend/app/core/: database.py  settings.py
backend/app/models/: __init__.py  audio.py  summary.py  transcription.py
backend/app/routers/: __init__.py  audio.py  health.py  processing.py
backend/app/schemas/: audio.py  health.py  summary.py  transcription.py
backend/app/services/: audio_service.py  storage_service.py  summary_service.py  transcription_service.py
backend/tests/: conftest.py
backend/tests/routers/: test_health.py
frontend/: .env.example  index.html  package-lock.json  package.json
frontend/src/: App.css  App.tsx  index.css
frontend/src/components/: AudioRecorder.tsx  ProcessingIndicator.tsx  SummaryDisplay.tsx
frontend/src/components/ui/: Button.tsx  Card.tsx  Input.tsx  index.ts
frontend/src/context/: MeetingContext.tsx  index.ts
frontend/src/hooks/: index.ts  useAudioUpload.ts  usePolling.ts
frontend/src/pages/: HomePage.tsx  ResultsPage.tsx  UploadPage.tsx  index.ts
frontend/src/services/: api.ts
frontend/src/types/: index.ts
